// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HealthIndicator proxy status section renders the degraded workloads 1`] = `
<Tooltip
  aria-label="Health indicator"
  className="kiali_f185fggs"
  content={
    <div>
      <strong>
        Degraded
      </strong>
      <HealthDetails
        health={
          AppHealth {
            "backendStatus": Object {
              "status": "Degraded",
            },
            "health": Object {
              "items": Array [
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "className": "icon-degraded",
                        "color": "var(--pf-t--global--icon--color--status--warning--default)",
                        "icon": [Function],
                        "name": "Degraded",
                        "priority": 3,
                        "status": "warning",
                      },
                      "text": "A: 2 / 2 (1 proxy unsynced)",
                    },
                  ],
                  "status": Object {
                    "className": "icon-degraded",
                    "color": "var(--pf-t--global--icon--color--status--warning--default)",
                    "icon": [Function],
                    "name": "Degraded",
                    "priority": 3,
                    "status": "warning",
                  },
                  "title": "Pod Status",
                  "type": "pod_status",
                },
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "className": "icon-na",
                        "color": "var(--pf-t--color--gray--50)",
                        "icon": [Function],
                        "name": "No health information",
                        "priority": 0,
                        "status": "custom",
                      },
                      "text": "Inbound: No requests",
                      "value": 0,
                    },
                    Object {
                      "status": Object {
                        "className": "icon-na",
                        "color": "var(--pf-t--color--gray--50)",
                        "icon": [Function],
                        "name": "No health information",
                        "priority": 0,
                        "status": "custom",
                      },
                      "text": "Outbound: No requests",
                      "value": 0,
                    },
                  ],
                  "status": Object {
                    "className": "icon-na",
                    "color": "var(--pf-t--color--gray--50)",
                    "icon": [Function],
                    "name": "No health information",
                    "priority": 0,
                    "status": "custom",
                  },
                  "title": "Traffic Status (Last {{duration}}) {\\"duration\\":\\"10m\\"}",
                  "type": "traffic_status",
                },
              ],
              "statusConfig": Object {
                "status": Object {
                  "className": "icon-na",
                  "color": "var(--pf-t--color--gray--50)",
                  "icon": [Function],
                  "name": "No health information",
                  "priority": 0,
                  "status": "custom",
                },
                "threshold": undefined,
                "title": "Traffic Status (Last {{duration}}) {\\"duration\\":\\"10m\\"}",
                "value": -1,
              },
            },
            "requests": Object {
              "healthAnnotations": Object {},
              "inbound": Object {},
              "outbound": Object {},
            },
          }
        }
      />
    </div>
  }
  position="auto"
>
  <span>
    <Icon
      className="icon-degraded kiali_f1wuzvd3"
      status="warning"
    >
      <ExclamationTriangleIcon />
    </Icon>
  </span>
</Tooltip>
`;

exports[`HealthIndicator renders healthy 1`] = `
<Tooltip
  aria-label="Health indicator"
  className="kiali_f185fggs"
  content={
    <div>
      <strong>
        Healthy
      </strong>
      <HealthDetails
        health={
          AppHealth {
            "backendStatus": Object {
              "status": "Healthy",
            },
            "health": Object {
              "items": Array [
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "className": "icon-healthy",
                        "color": "var(--pf-t--global--icon--color--status--success--default)",
                        "icon": [Function],
                        "name": "Healthy",
                        "priority": 1,
                        "status": "success",
                      },
                      "text": "A: 1 / 1",
                    },
                    Object {
                      "status": Object {
                        "className": "icon-healthy",
                        "color": "var(--pf-t--global--icon--color--status--success--default)",
                        "icon": [Function],
                        "name": "Healthy",
                        "priority": 1,
                        "status": "success",
                      },
                      "text": "B: 2 / 2",
                    },
                  ],
                  "status": Object {
                    "className": "icon-healthy",
                    "color": "var(--pf-t--global--icon--color--status--success--default)",
                    "icon": [Function],
                    "name": "Healthy",
                    "priority": 1,
                    "status": "success",
                  },
                  "title": "Pod Status",
                  "type": "pod_status",
                },
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "className": "icon-na",
                        "color": "var(--pf-t--color--gray--50)",
                        "icon": [Function],
                        "name": "No health information",
                        "priority": 0,
                        "status": "custom",
                      },
                      "text": "Inbound: No requests",
                      "value": 0,
                    },
                    Object {
                      "status": Object {
                        "className": "icon-na",
                        "color": "var(--pf-t--color--gray--50)",
                        "icon": [Function],
                        "name": "No health information",
                        "priority": 0,
                        "status": "custom",
                      },
                      "text": "Outbound: No requests",
                      "value": 0,
                    },
                  ],
                  "status": Object {
                    "className": "icon-na",
                    "color": "var(--pf-t--color--gray--50)",
                    "icon": [Function],
                    "name": "No health information",
                    "priority": 0,
                    "status": "custom",
                  },
                  "title": "Traffic Status (Last {{duration}}) {\\"duration\\":\\"10m\\"}",
                  "type": "traffic_status",
                },
              ],
              "statusConfig": Object {
                "status": Object {
                  "className": "icon-na",
                  "color": "var(--pf-t--color--gray--50)",
                  "icon": [Function],
                  "name": "No health information",
                  "priority": 0,
                  "status": "custom",
                },
                "threshold": undefined,
                "title": "Traffic Status (Last {{duration}}) {\\"duration\\":\\"10m\\"}",
                "value": -1,
              },
            },
            "requests": Object {
              "healthAnnotations": Object {},
              "inbound": Object {},
              "outbound": Object {},
            },
          }
        }
      />
    </div>
  }
  position="auto"
>
  <span>
    <Icon
      className="icon-healthy kiali_f6kk0cu"
      status="success"
    >
      <CheckCircleIcon />
    </Icon>
  </span>
</Tooltip>
`;
